syntax = "proto3";

message User {
	string login = 1;
	int32 id = 2;
    string node_id = 3;
	string avatar_url = 4;
	string gravatar_id = 5;
	string url = 6;
	string html_url = 7;
	string followers_url = 8;
	string following_url = 9;
	string gists_url = 10;
	string starred_url = 11;
	string subscriptions_url = 12;
	string organizations_url = 13;
	string repos_url = 14;
	string events_url = 15;
	string received_events_url = 16;
	string type = 17;
	bool site_admin = 18;
}

message CommitDetailTree {
	string sha = 1;
	string url = 2;
}

message CommitParentTree {
	string sha = 1;
	string url = 2;
	string html_url = 3;
}

message CommitUser {
	string name = 1;
	string email = 2;
	string date = 3;
}

message Verification {
    bool verified = 1;
    string reason = 2;
}

message CommitDetail {
	CommitUser author = 1;
	CommitUser committer = 2;
	string message = 3;
	CommitDetailTree tree = 4;
	string url = 5;
	int32 comment_count = 6;
    Verification verification = 7;
}

message CommitTL {
	string sha = 1;
    string node_id = 2;
    CommitDetail commit = 3;
    string url  = 4;
    string html_url  = 5;
    string comments_url  = 6;

	User author = 7;
	User committer = 8;
}

message CommitList {
	repeated CommitTL commits = 1;
}