syntax = "proto3";

message JobData {
    int32 work_year = 1;
    string job_title = 2;
    string job_category = 3;
    string salary_currency = 4;
    int32 salary = 5;
    int32 salary_in_usd = 6;
    string employee_residence = 7;
    string experience_level = 8;
    string employment_type = 9;
    string work_setting = 10;
    string company_location = 11;
    string company_size = 12;
}

message JobList {
    repeated JobData jobsData = 1;
}